force-app/main/default/objects/FNS_CommunityConfig__c/FNS_CommunityConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting used for Community configuration.</description>
    <label>Community Config</label>
</CustomObject>