force-app/main/default/objects/FNS_CommunityConfig__c/fields/FNS_CommunityProfile__c.field-meta.xml
<CustomField>
    <fullName>FNS_CommunityProfile__c</fullName>
    <label>Community Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>