force-app/main/default/objects/FNS_CommunityConfig__c/fields/FNS_PermisionSetName__c.field-meta.xml
<CustomField>
    <fullName>FNS_PermisionSetName__c</fullName>
    <label>Permision Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>