force-app/main/default/objects/FNS_CommunityConfig__c/fields/FNS_WelcomeEmailTemplateName__c.field-meta.xml
<CustomField>
    <fullName>FNS_WelcomeEmailTemplateName__c</fullName>
    <label>Welcome Email template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>